syntax = "proto3";

package modelUpdate;

option go_package = "github.com/Lekssays/ProxDAG/protocol/proto/modelUpdate";

message ModelUpdate {
    string modelID = 1;
    repeated string parents = 2;
    string weights = 3;
    string pubkey = 4;
    uint32 timestamp = 5;
    float accuracy = 6;
    string model = 7;
}